Update common repo files from synthtool (#756)
* Update common repo files from synthtool

* Ignore license-checks.xml from templates

* Update issue templates from synth